--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^17.4.2",
+    "@react-native-firebase/firestore": "^17.4.2",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
-    "firebase": "^9.19.1",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-date-picker": "^4.2.10",
     "react-native-safe-area-context": "^4.5.1",
-    "react-native-screens": "^3.20.0"
+    "react-native-screens": "^3.20.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
